Add test for props

--- a/react4/index.html
+++ b/react4/index.html
@@ -14,7 +14,9 @@
     <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
 
     <script src="https://unpkg.com/babel-standalone"></script>
-    <script src="index.js" type="text/jsx"></script>
+    <script src="YoBaby.js" type="text/jsx"></script>
+    <script src="Mood.js" type="text/jsx"></script>
+    <script src="App.js" type="text/jsx"></script>
 </body>
 
 </html>
