--- a/react7_list/index.html
+++ b/react7_list/index.html
@@ -14,8 +14,7 @@
     <script src="https://unpkg.com/react-dom/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone"></script>
 
-    <script src="Title.js" type="text/jsx"></script>
-    <script src="Machine.js" type="text/jsx"></script>
+    <script src="List.js" type="text/jsx"></script>
     <script src="App.js" type="text/jsx"></script>
 </body>
 
